# greppy

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG-0.3.0-draft.md  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  NOTES-grid-rust.md  NOTES-sol2.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY.md
.github/workflows/: agent-benchmark.yml  ci.yml  codeql.yml  coding-benchmark.yml  dependency-review.yml  msix.yml  release.yml  security-audit.yml  summary-quality.yml  task-bank-audit.yml
bench/: PERF-vs-c.md  README.md  agent_utility.sh  freshness_bench.sh  grep_compat.sh  hardware-evidence.schema.json  hardware_evidence.sh  qwen35_llama_cpp_baseline.md  release_daemon_stress.sh  release_package_smoke.sh  run_all.sh  runtime_footprint.py  summary_quality.py  test_runtime_footprint.py  test_summary_quality.py
bench/agent_coding/: HARVEST-NOTES-serious.md  HARVEST-NOTES-v2.md  README.md  VALIDATION-NOTES-v2.md  audit_v2_run.py  harvest_candidates_v2.jsonl  harvest_candidates_v2_serious.jsonl  run_benchmark.py  swe_bench_adapter.py  test_benchmark.py  validate_candidates_v2.py  (+1 more)
crates/cli/: Cargo.toml  build.rs
crates/cli/assets/: MODEL_ASSETS.json
crates/cli/assets/embeddinggemma-300m-q4k/: README.md  embeddinggemma-300M-Q4_K.gguf
crates/cli/assets/qwen35-0.8b-mtp-q4km/: Qwen3.5-0.8B-MTP-Q4_K_M.gguf  Qwen3.5-0.8B-MTP-Q4_K_M.gguf.sha256  README.md  TRAINING_STATUS.md
crates/cli/assets/qwen35-0.8b-q4km/: Qwen3.5-0.8B-Q4_K_M.gguf  Qwen3.5-0.8B-Q4_K_M.gguf.sha256  README.md  tokenizer.json.sha256
crates/cli/src/: embed_daemon.rs  inference_daemon.rs  lib.rs  main.rs  summarize_daemon.rs  trial.rs  verify.rs
crates/cli/tests/: cli_hardening.rs  context_and_code.rs  edit_m5.rs  edit_plan_usability.rs  edit_postel.rs  edit_smoke.rs  graph_grid_cpp.rs  graph_grid_csharp.rs  graph_grid_dart.rs  graph_grid_haskell.rs  graph_grid_kotlin.rs  graph_grid_lua.rs  graph_grid_ocaml.rs  graph_grid_php.rs  graph_grid_ruby.rs  graph_grid_scala.rs  graph_grid_swift.rs  graph_grid_zig.rs  graph_nav.rs  graph_nav_name_collision.rs  grep_passthrough_non_utf8.rs  grep_postel.rs  nav_postel.rs  output_budget.rs  read_file_dispatch.rs  semantic_fallback.rs  stats_path_callees.rs  trial.rs
crates/core/: Cargo.toml
crates/core/src/: cache.rs  diag.rs  error.rs  git_fingerprint.rs  lib.rs  logging.rs  membudget.rs  profile.rs  strutil.rs  sysinfo.rs  validate.rs  workspace.rs
crates/discover/: Cargo.toml
crates/discover/src/: binary.rs  language.rs  lib.rs  skip.rs
crates/edit/: Cargo.toml
crates/edit/src/: certificate.rs  ensure.rs  journal.rs  plan.rs  txn.rs  verbs.rs
crates/edit/tests/: grid_java.rs  grid_rust.rs  m3_structural.rs  m4_semantic_data.rs
crates/embed-native/: Cargo.toml  build.rs
crates/embed-native/src/: backend.rs  lib.rs  matmul.rs  model.rs  performance.rs  quant.rs
crates/embed-native/src/cuda/: ffi.rs  model.rs  weights.rs
crates/embed-native/src/metal/: ffi.rs  mod.rs  model.rs  ops.rs  weights.rs
crates/embeddinggemma/: Cargo.toml  build.rs
crates/embeddinggemma/examples/: bench_embed.rs  embed_once.rs  load_split.rs
crates/embeddinggemma/src/: lib.rs
crates/freshness/: Cargo.toml
crates/freshness/src/: fingerprint.rs  incremental.rs  lib.rs  lock.rs
crates/grepplus/: Cargo.toml
crates/grepplus/examples/: freshness-probe.rs  parity-dump.rs
crates/grepplus/src/: heuristic.rs  lib.rs  main.rs  run.rs  sidecar.rs
crates/grepplus/tests/: drop_in_safety.rs  grep_passthrough.rs
crates/grepplus/tests/fixtures/: count.txt  extra.txt  main.rs
crates/indexer/: Cargo.toml
crates/indexer/examples/: profile_index.rs
crates/indexer/src/: embedding.rs  lib.rs  structural.rs
crates/parser/: Cargo.toml  build.rs
crates/parser/examples/: dump_ts.rs
crates/parser/src/: extract.rs  language.rs  lib.rs  provider.rs  query.rs  registry.rs  spec.rs
crates/parser/src/langs/: ada.rs  clojure.rs  cmake.rs  commonlisp.rs  crystal.rs  css.rs  cuda.rs  d.rs  dart.rs  dockerfile.rs  elixir.rs  elm.rs  erlang.rs  fortran.rs  fsharp.rs  gdscript.rs  gleam.rs  glsl.rs  graphql.rs  groovy.rs  haskell.rs  hcl.rs  json.rs  julia.rs  latex.rs  make.rs  markdown.rs  matlab.rs  mod.rs  nix.rs  objc.rs  ocaml.rs  pascal.rs  powershell.rs  prisma.rs  protobuf.rs  purescript.rs  racket.rs  scheme.rs  solidity.rs  (+8 more)
crates/qwen35-native/: Cargo.toml
crates/qwen35-native/examples/: brief_eval.rs  inspect.rs  qwen_inference_contract.rs
crates/qwen35-native/src/: cpu.rs  inventory.rs  lib.rs  model.rs  postprocess.rs  prompt.rs  sampler.rs
crates/qwen35-native/src/cuda/: mod.rs  model.rs
crates/qwen35-native/src/metal/: mod.rs  model.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: graph.rs  lexical.rs  lib.rs  semantic.rs  simhash.rs  trace.rs  vector.rs
crates/store/: Cargo.toml
crates/store/src/: diagnostics.rs  edge.rs  expand_pack.rs  file_content.rs  file_state.rs  fts.rs  index_skip.rs  lib.rs  maintenance.rs  migrate.rs  node.rs  project.rs  project_summary.rs  provider_state.rs  query_cache.rs  raw_edge.rs  schema.rs  stats.rs  store.rs  store_error.rs  vector_embedding.rs  workspace_state.rs
crates/store/src/migrations/: 0001_initial.sql  0002_file_content_fts.sql  0003_file_content_fts_external.sql  0004_file_content_fts_triggers.sql  0005_nodes_by_name_index.sql  0006_nodes_fts_rebuild.sql  0007_raw_edges.sql  0008_provider_state.sql  0009_index_skips.sql  0010_vector_embeddings.sql  0013_expand_packs.sql  0015_index_skip_identity.sql
crates/store/tests/: golden_master.rs
licenses/: EMBEDDED-MODEL-TERMS.md  EMBEDDINGGEMMA-MODIFICATIONS.txt  EMBEDDINGGEMMA-PROVENANCE.json  MODEL-REDISTRIBUTION.lock.json  QWEN3.5-MODIFICATIONS.txt  QWEN3.5-PROVENANCE.json  QWEN3.5-TRAINING-DATA-MANIFEST.json
tools/: build_msix.ps1  fetch_model_assets.sh  release_artifacts.py  release_asset_contract.v1.json  test_release_artifacts.py  test_verify_model_redistribution.py  test_verify_workflow_action_pins.py  verify_model_redistribution.py  verify_workflow_action_pins.py
(+79 files in other folders)
