[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/store",
    "crates/discover",
    "crates/parser",
    "crates/indexer",
    "crates/resolver",
    "crates/search",
    "crates/embed-native",
    "crates/qwen35-native",
    "crates/freshness",
    "crates/greppy",
    "crates/cli",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.95"
license = "MIT"
description = "Local code navigation for coding agents: deterministic code graph, native semantic search, and byte-exact grep passthrough."
repository = "https://github.com/metric-space-ai/greppy"
homepage = "https://github.com/metric-space-ai/greppy"
readme = "README.md"
keywords = ["grep", "code-search", "code-graph", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[workspace.dependencies]
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
which = "6"
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
sha2 = "0.10"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-lua = "0.5"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-scala = "0.26"
tree-sitter-swift = "0.7"
tree-sitter-zig = "1.1"
tree-sitter-r = "1.3"
ignore = "0.4"
walkdir = "2"
rayon = "1"
libc = "0.2"
windows-sys = "0.61"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
debug = 1
