[package]
name = "greppy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "greppy unified CLI for grep-compatible search, code navigation, and semantic search"

[[bin]]
name = "greppy"
path = "src/main.rs"

[dependencies]
greppy-core = { path = "../core" }
greppy-discover = { path = "../discover" }
greppy-embed-native = { path = "../embed-native" }
greppy-freshness = { path = "../freshness" }
greppy-grep = { path = "../greppy" }
greppy-indexer = { path = "../indexer" }
greppy-qwen35-native = { path = "../qwen35-native" }
greppy-search = { path = "../search" }
greppy-store = { path = "../store" }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# EmbeddingGemma and Qwen3.5 are product assets, not optional features. Every
# build bakes both models and tokenizers into the binary. The only inference
# build choices are the accelerated backends; CPU is always available.
[features]
default = []
# GPU inference for EmbeddingGemma. Selected per platform at BUILD time (the
# per-platform release binaries enable it; the runtime auto-detects and uses
# the GPU with no `--device` flag). On macOS per-invocation Metal init can cost
# more than it saves for a single one-shot query, so it stays build-opt-in:
# `cargo build --release --features metal` (Linux/Windows CUDA: `--features cuda`).
metal = ["greppy-embed-native/metal", "greppy-indexer/metal", "greppy-qwen35-native/metal"]
accelerate = []
cuda = ["greppy-embed-native/cuda", "greppy-indexer/cuda", "greppy-qwen35-native/cuda"]

[build-dependencies]
sha2 = "0.10"
