[package]
name = "greppy-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "greppy core types and error definitions"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
# sha2-asm currently vendors Unix-style x86 assembly that MSVC cannot build.
# Enabling it from this shared core crate feature-unifies accelerated hashing
# for every normal dependency on supported Unix targets while Windows retains
# the portable implementation.
sha2 = { workspace = true, features = ["asm"] }

[target.'cfg(windows)'.dependencies]
sha2 = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
