[package]
name = "grepplus-discover"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "grepplus-rs file discovery, ignore rules, language detection"

[dependencies]
grepplus-core = { path = "../core" }
thiserror = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
