[package]
name = "greppy-edit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "greppy transactional read/edit surface: CAS-guarded, certificate-emitting edits"

[dependencies]
greppy-core = { path = "../core" }
greppy-parser = { path = "../parser" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
regex = { workspace = true }
