[package]
name = "greppy-embed-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Candle-free native Rust + ggml-kernel inference of EmbeddingGemma-300M (Q4_K). CPU first, then Metal/CUDA."
build = "build.rs"

[lib]
test = false

[[test]]
name = "dequant_parity"
harness = false

[[test]]
name = "tokenizer_parity"
harness = false

[[test]]
name = "forward_parity"
harness = false

[[test]]
name = "metal_forward_parity"
harness = false
required-features = ["metal"]

[[test]]
name = "metal_kernel_parity"
harness = false
required-features = ["metal"]

[[test]]
name = "cuda_forward_parity"
harness = false
required-features = ["cuda"]

[[test]]
name = "api_contract"
harness = false

[[test]]
name = "robustness"
harness = false

[[example]]
name = "bench_prefill"

[dependencies]
thiserror = { workspace = true }
tokenizers = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
memmap2 = "0.9"
half = "2"
libc = { workspace = true }
bytemuck = "1"
gemm = { version = "0.19.0", features = ["wasm-simd128-enable"] }
libloading = { version = "0.8", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5", optional = true }
objc2-foundation = { version = "0.2", features = ["NSString", "NSURL"], optional = true }
block2 = { version = "0.5.1", optional = true }
objc2-metal = { version = "0.2", features = [
    "block2",
    "MTLDevice",
    "MTLCommandQueue",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLBlitCommandEncoder",
    "MTLComputeCommandEncoder",
    "MTLComputePipeline",
    "MTLBuffer",
    "MTLLibrary",
    "MTLResource",
    "MTLTypes",
    "MTLPixelFormat",
    "MTLStageInputOutputDescriptor",
    "MTLFunctionDescriptor",
    "MTLFunctionConstantValues",
    "MTLArgument",
], optional = true }

[dev-dependencies]
# golden-vector verification fixtures live in testdata/golden (minted from candle
# via crates/embeddinggemma examples/mint_golden.rs, then candle is removed).

[features]
default = []
metal = ["dep:objc2", "dep:objc2-foundation", "dep:block2", "dep:objc2-metal"]
cuda = ["dep:libloading"]

# This crate vendors/ports ggml numerical kernels (Q4_K/Q6_K/Q8_0 dot + matmul)
# plus hand-written Metal/CUDA dispatch. Many style lints fight the ggml-faithful
# shape of that code: many-argument kernel signatures, ggml's Q4_K/Q6_K type names,
# explicit index arithmetic, and cfg-gated per-arch SIMD fallbacks (legitimately
# dead/unused on the other arch). Allow those here rather than distort the kernels;
# real defects are caught by the golden-parity + robustness test suites.
[lints.rust]
non_camel_case_types = "allow"
nonstandard_style = "allow"
unreachable_code = "allow"
dead_code = "allow"
unused = "allow"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
large_enum_variant = "allow"
identity_op = "allow"
needless_range_loop = "allow"
manual_is_multiple_of = "allow"
excessive_precision = "allow"
arc_with_non_send_sync = "allow"
len_without_is_empty = "allow"
missing_safety_doc = "allow"
manual_c_str_literals = "allow"
manual_clamp = "allow"
manual_pattern_char_comparison = "allow"
needless_borrow = "allow"
needless_return = "allow"
redundant_field_names = "allow"
field_reassign_with_default = "allow"
unnecessary_cast = "allow"
doc_lazy_continuation = "allow"
