[package]
name = "grepplus-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "grepplus-rs multi-pass indexer"

[dependencies]
grepplus-core = { path = "../core" }
grepplus-discover = { path = "../discover" }
grepplus-embeddinggemma = { path = "../embeddinggemma" }
grepplus-freshness = { path = "../freshness" }
grepplus-parser = { path = "../parser" }
grepplus-resolver = { path = "../resolver" }
grepplus-store = { path = "../store" }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
