[package]
name = "grepplus-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "grepplus-rs tree-sitter AST extraction"

[dependencies]
grepplus-core = { path = "../core" }
grepplus-store = { path = "../store" }
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-lua = { workspace = true }
tree-sitter-kotlin-ng = { workspace = true }
tree-sitter-scala = { workspace = true }
tree-sitter-swift = { workspace = true }
tree-sitter-zig = { workspace = true }
tree-sitter-r = { workspace = true }
inventory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter-elixir = "0.3.5"
tree-sitter-julia = "0.23.1"
tree-sitter-ocaml = "0.25"
tree-sitter-haskell = "0.23.1"
tree-sitter-dart = "0.2.0"
tree-sitter-groovy = "0.1.2"
tree-sitter-elm = "5.9.0"
tree-sitter-nix = "0.3.0"
tree-sitter-erlang = "0.19.0"
tree-sitter-clojure-orchard = "0.2.5"
tree-sitter-commonlisp = "0.4.1"
tree-sitter-solidity = "1.2.13"
tree-sitter-gleam = "1.0.0"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-racket = "0.24.7"
tree-sitter-fsharp = "0.3.0"
tree-sitter-json = "0.24.8"
tree-sitter-purescript = { git = "https://github.com/postsolar/tree-sitter-purescript", tag = "v0.3.0", version = "0.3.0" }
tree-sitter-fortran = "0.5.1"
tree-sitter-ada = "0.1.0"
tree-sitter-pascal = "0.10.2"
tree-sitter-hcl = "1.1.0"
tree-sitter-graphql = "0.1.0"
tree-sitter-proto = "0.3.0"
tree-sitter-sequel = "0.3.11"
tree-sitter-cmake = "0.7.1"
bca-tree-sitter-tcl = "2.0.0"
tree-sitter-d = "0.8.2"
tree-sitter-crystal = { git = "https://github.com/crystal-lang-tools/tree-sitter-crystal", rev = "50ca9e6fcfb16a2cbcad59203cfd8ad650e25c49", version = "0.0.1" }
tree-sitter-scheme = "0.24.7"
tree-sitter-powershell = "0.26.4"
tree-sitter-objc = "3.0.2"
tree-sitter-systemverilog = "0.3.1"
tree-sitter-matlab = "1.3.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-md = "0.5.3"
tree-sitter-css = "0.25.0"
tree-sitter-svelte-ng = "1.0.2"
tree-sitter-vue-next = "0.1.0"
codebook-tree-sitter-latex = "0.6.1"
tree-sitter-containerfile = "0.8.1"
tree-sitter-make = "1.1.1"
tree-sitter-vhdl = "1.4.0"
tree-sitter-glsl = "0.2.0"
tree-sitter-cuda = "0.21.1"
tree-sitter-gdscript = "6.1.0"
tree-sitter-prisma-io = "1.6.0"
tree-sitter-meson = { git = "https://github.com/tree-sitter-grammars/tree-sitter-meson", tag = "v1.3.0", version = "1.3.0" }
