[package]
name = "grepplus-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "grepplus-rs graph, lexical, and semantic search"

[dependencies]
grepplus-core = { path = "../core" }
grepplus-embeddinggemma = { path = "../embeddinggemma" }
grepplus-store = { path = "../store" }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
