[package]
name = "grepplus-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "grepplus-rs SQLite graph store with FTS5"

[dependencies]
grepplus-core = { path = "../core" }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
# Enables `Connection::commit_hook`, used only by the fsync-batching
# regression test to count committed write transactions precisely.
# Additive feature on the same rusqlite version — no behavioural change.
rusqlite = { workspace = true, features = ["hooks"] }
